# model-optimization

./: .gitignore  README.md  mnist_training.py  model_optimization.py  pyproject.toml  requirements.txt  source.txt
src/: mnist_training.py  model_optimization.py
