[tool.poetry]
name = "model-optimization" 
version = "0.1.0"  
description = "A project for model optimization"
authors = ["Praveen"]  
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"  # Ensure it matches your Python version
absl-py = "1.4.0"
anyio = "4.8.0"
astunparse = "1.6.3"
attrs = "25.1.0"
build = "1.2.2.post1"
CacheControl = "0.14.2"
certifi = "2025.1.31"
cffi = "1.17.1"
charset-normalizer = "3.4.1"
cleo = "2.1.0"
crashtest = "0.4.1"
cryptography = "44.0.2"
distlib = "0.3.9"
dm-tree = "<0.1.9"
dulwich = "0.22.8"
execnet = "2.1.1"
fastjsonschema = "2.21.1"
filelock = "3.17.0"
findpython = "0.6.2"
flatbuffers = "25.2.10"
gast = "0.6.0"
google-pasta = "0.2.0"
grpcio = "1.70.0"
h11 = "0.14.0"
h5py = "3.13.0"
httpcore = "1.0.7"
httpx = "0.28.1"
idna = "3.10"
iniconfig = "2.0.0"
installer = "0.7.0"
jaraco-classes = "3.4.0"
jaraco-context = "6.0.1"
jaraco-functools = "4.1.0"
jeepney = "0.9.0"
keras = "3.9.0"
keyring = "25.6.0"
libclang = "18.1.1"
Markdown = "3.7"
markdown-it-py = "3.0.0"
MarkupSafe = "3.0.2"
mdurl = "0.1.2"
ml-dtypes = "0.4.1"
more-itertools = "10.6.0"
msgpack = "1.1.0"
namex = "0.0.8"
numpy = ">=1.23,<2.0"
opt-einsum = "3.4.0"
optree = "0.14.1"
packaging = "24.2"
pbs-installer = "2025.2.12"
pkginfo = "1.12.1.2"
platformdirs = "4.3.6"
pluggy = "1.5.0"
poetry = "2.1.1"
poetry-core = "2.1.1"
protobuf = "4.25.6"
pycparser = "2.22"
Pygments = "2.19.1"
pyproject-hooks = "1.2.0"
PyYAML = "6.0.2"
RapidFuzz = "3.12.2"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
rich = "13.9.4"
scipy = "1.15.2"
SecretStorage = "3.3.3"
setuptools = "75.8.2"
shellingham = "1.5.4"
six = "1.17.0"
sniffio = "1.3.1"
tensorboard = "2.18.0"
tensorboard-data-server = "0.7.2"
tensorflow = "2.18.0"
tensorflow-model-optimization = "0.8.0"
termcolor = "2.5.0"
tf-keras = "2.18.0"
tomlkit = "0.13.2"
trove-classifiers = "2025.3.3.18"
typing-extensions = "4.12.2"
urllib3 = "2.3.0"
virtualenv = "20.29.3"
Werkzeug = "3.1.3"
wheel = "0.45.1"
wrapt = "1.17.2"
zstandard = "0.23.0"

[tool.poetry.dev-dependencies]
pytest = "8.3.5"
pytest-xdist = "3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
